# rangex-rs

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
benches/: basic.rs  indexed.rs
examples/: range_demo.rs
src/: basic_range.rs  edge.rs  indexed_range.rs  lib.rs
